frontend/src/AppBuilder/CodeEditor/SearchBox.scss
.search-panel-wrapper {
    width: 100%;
    height: 44px;
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid var(--border-weak);
    padding: 8px;
    background-color: var(--background-surface-layer-01);
    border-radius: 4px 4px 0 0;

    .search-panel {
        display: flex;
        width: 309px;
        height: 28px;
        gap: 4px;

        .search-replace-inputs {
            height: 28px;
            width: 245px;
            display: flex;
            gap: 5px;
        }

        .search-buttons {
            display: flex;
            align-items: center;
            height: 28px;

            .navbar-seperator {
                margin: 0 2px;
            }
        }
    }

    .search-match-count {
        display: flex;
        align-items: center;
        font-family: 'IBM Plex Sans';
        font-size: 11px;
        line-height: 16px;
        font-weight: 400;
        color: var(--text-placeholder);
    }

    .replace-buttons {
        display: flex;
        align-items: center;
        height: 28px;

        .navbar-seperator {
            margin: 0 2px;
        }
    }
}

.code-hinter-wrapper .codehinter-search-btn {
    z-index: 1000;
}

